[package]
name = "post-old"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
shared-kernel = { workspace = true }
shared-proto = { workspace = true, features = ["post"] }
infra-scylla = { workspace = true, features = ["macros"] }
infra-fred = { workspace = true }
rdkafka = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tonic = { workspace = true }
prost-types = { workspace = true }
pbjson-types = { workspace = true }

[dev-dependencies]
infra-test = { workspace = true }
post-test-utils = { workspace = true }
