[package]
name = "profile-test-utils"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
shared-kernel = { workspace = true }
shared-kernel-test-utils = { workspace = true }
profile-old = { workspace = true }
auth = { workspace = true }
auth-test-utils = { workspace = true }
infra-test = { workspace = true }
infra-sqlx = { workspace = true }
infra-kafka = { workspace = true }
infra-fred = { workspace = true }
shared-proto = { workspace = true, features = ["profile"] }
async-trait = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
