# crates/profile/BUILD.bazel

load("//:defs.bzl", "core_rust_library")

core_rust_library(
    name = "profile",
    srcs = glob(["src/**/*.rs"]),
    edition = "2024",
    crate_features = [
        "postgres",
        "concurrency",
        "runtime",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//crates/shared-kernel:shared_kernel",

        # --- Dépendances gRPC Runtime (Indispensables en 0.14) ---
        "@crates//:tonic",
        "@crates//:tonic-prost",
        "@crates//:prost",
        "@crates//:prost-types",

        # --- Autres dépendances ---
        "@crates//:tokio",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:chrono",
        "@crates//:uuid",
        "@crates//:sqlx",
        "@crates//:rand",
        "@crates//:anyhow",
        "@crates//:tracing",
        "@crates//:elasticsearch",
        "@crates//:scylla",
        "@crates//:futures-util",
    ],
    proc_macro_deps = [
        "@crates//:async-trait",
    ],
)