# crates/profile/BUILD.bazel

load("//:defs.bzl", "core_rust_library")

core_rust_library(
    name = "profile",
    srcs = glob(["src/**/*.rs"]),
    edition = "2024",
    compile_data = glob(["migrations/**"]),
    crate_features = [
        "postgres",
        "scylla",
        "redis",
        "concurrency",
        "runtime",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//crates/shared-kernel:shared_kernel",

        # --- Dépendances gRPC Runtime ---
        "@crates//:tonic",
        "@crates//:tonic-prost",
        "@crates//:prost",
        "@crates//:prost-types",

        # --- Drivers & Persistence ---
        "@crates//:sqlx",
        "@crates//:scylla",
        "@crates//:elasticsearch",

        # --- Core ---
        "@crates//:tokio",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:chrono",
        "@crates//:uuid",
        "@crates//:rand",
        "@crates//:anyhow",
        "@crates//:tracing",
        "@crates//:futures-util",
    ],
    proc_macro_deps = [
        "@crates//:async-trait",
    ],
)

filegroup(
    name = "migration_files",
    srcs = glob(["migrations/**/*"]),
    visibility = ["//visibility:public"],
)