# crates/profile/BUILD.bazel

load("//:defs.bzl", "core_rust_library", "core_rust_test")

core_rust_library(
    name = "profile",
    srcs = glob(["src/**/*.rs"]),
    edition = "2024",
    compile_data = glob(["migrations/**"]),
    crate_features = [
        "postgres",
        "scylla",
        "redis",
        "concurrency",
        "runtime",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//crates/shared-kernel:shared_kernel",

        # --- Dépendances gRPC Runtime ---
        "@crates//:tonic",
        "@crates//:tonic-prost",
        "@crates//:prost",
        "@crates//:prost-types",

        # --- Drivers & Persistence ---
        "@crates//:sqlx",
        "@crates//:scylla",
        "@crates//:elasticsearch",

        # --- Core ---
        "@crates//:tokio",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:chrono",
        "@crates//:uuid",
        "@crates//:rand",
        "@crates//:anyhow",
        "@crates//:tracing",
        "@crates//:futures-util",
    ],
    proc_macro_deps = [
        "@crates//:async-trait",
    ],
)

core_rust_test(
    name = "profile_test",
    crate = ":profile",
    # On active test-utils pour profile ET pour ses dépendances locales
    crate_features = [
        "test-utils",
        "postgres", # Assure-toi que les drivers sont là pour les tests
        "scylla",
    ],
    tags = ["local", "requires-network"],
    data = [":migration_files"],
    deps = [
        # On s'assure que shared-kernel est bien là
        "//crates/shared-kernel:shared_kernel",
        "@crates//:testcontainers",
        "@crates//:testcontainers-modules",
        "@crates//:sqlx",
        "@crates//:scylla",
        "@crates//:tokio",
        "@crates//:futures",
    ],
)

core_rust_test(
    name = "profile_integration_test",
    # On va chercher tous les fichiers .rs dans le dossier tests/
    srcs = glob(["tests/**/*.rs"]),
    crate_root = "tests/integration_tests.rs",
    edition = "2024",
    crate_features = [
        "test-utils",
        "postgres",
        "scylla",
    ],
    # Tags indispensables pour Testcontainers
    tags = ["local", "requires-network"],
    # On passe les migrations pour que sqlx puisse initialiser la DB dans le container
    data = [
        ":migration_files",
        "//crates/shared-kernel:migration_files",
        ],
    deps = [
        ":profile", # On dépend de la library qu'on teste
        "//crates/shared-kernel:shared_kernel",
        "@crates//:testcontainers",
        "@crates//:testcontainers-modules",
        "@crates//:sqlx",
        "@crates//:scylla",
        "@crates//:tokio",
        "@crates//:futures",
        "@crates//:chrono",
        "@crates//:uuid",
        "@crates//:tonic",
        "@crates//:serde_json",
    ],
)

filegroup(
    name = "migration_files",
    srcs = glob(["migrations/**/*"]),
    visibility = ["//visibility:public"],
)