# crates/profile/Cargo.toml

[package]
name = "profile"
version.workspace = true
edition.workspace = true

[dependencies]
shared-kernel = { workspace = true, features = [
    "postgres",
    "kafka",
    "elasticsearch",
    "concurrency",
    "runtime",
    "test-utils",
] }

auth = { workspace = true }
shared-proto = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
elasticsearch = { workspace = true }
async-trait = { workspace = true }
rand = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
scylla = { workspace = true }

prost = { workspace = true }
tonic = { workspace = true }
prost-types = { workspace = true }
tonic-prost = { workspace = true }
tokio-stream = { version = "0.1", features = ["net"] }

[build-dependencies]
tonic-prost-build = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
sqlx = { workspace = true }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
futures = { workspace = true }

[features]
test-utils = ["shared-kernel/test-utils"]
