# crates/profile/Cargo.toml

[package]
name = "profile"
version.workspace = true
edition.workspace = true

[features]
test-utils = []

[dependencies]
shared-kernel = { workspace = true, features = [
    "test-utils",
    "elasticsearch",
    "concurrency",
    "runtime",
] }
infra-sqlx = { workspace = true }
infra-kafka = { workspace = true }
infra-fred = { workspace = true }
infra-test = { workspace = true }

auth = { workspace = true }
shared-proto = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
elasticsearch = { workspace = true }
async-trait = { workspace = true }
rand = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

prost = { workspace = true }
tonic = { workspace = true }
prost-types = { workspace = true }
tonic-prost = { workspace = true }
tokio-stream = { workspace = true }
sqlx = { workspace = true, features = ["postgres", "macros", "derive"] }

[build-dependencies]
tonic-prost-build = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
futures = { workspace = true }
