# crates/shared-kernel/BUILD.bazel

load("//:defs.bzl", "core_rust_library")

core_rust_library(
    name = "shared_kernel",
    srcs = glob(["src/**/*.rs"]),
    compile_data = glob(["migrations/**"]),
    crate_features = [
        "postgres",
        "redis",
        "scylla",
        "kafka",
        "elasticsearch",
        "grpc",
        "concurrency",
        "runtime",
        "test-utils",
    ],
    visibility = ["//visibility:public"],
    deps = [
        # --- Core (Always included) ---
        "@crates//:uuid",
        "@crates//:chrono",
        "@crates//:chrono-tz",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:thiserror",
        "@crates//:tracing",
        "@crates//:url",
        "@crates//:rand",
        "@crates//:futures-util",
        "@crates//:log",
        "@crates//:regex",
        "@crates//:seahash",
        "@crates//:unicode-normalization",
        "@crates//:dyn-clone",
         "@crates//:anyhow",

        # --- gRPC / Protobuf ---
        "@crates//:tonic",
        "@crates//:prost",
        "@crates//:prost-types",

        # --- Drivers & Async (Optional in Cargo, but mapped here) ---
        "@crates//:sqlx",
        "@crates//:fred",
        "@crates//:scylla",
        "@crates//:rdkafka",
        "@crates//:elasticsearch", # Ajouté
        "@crates//:dashmap",
        "@crates//:futures",
        "@crates//:tokio",
        "@crates//:tokio-util",
        "@crates//:tracing-subscriber",

         # --- Tests ---
        "@crates//:testcontainers",
        "@crates//:testcontainers-modules",
        "@crates//:once_cell",
    ],
    proc_macro_deps = [
        "@crates//:async-trait",
    ],
)

filegroup(
    name = "migration_files",
    srcs = glob(["migrations/**/*"]),
    visibility = ["//visibility:public"],
)