# crates/shared-kernel/Cargo.toml

[package]
name = "shared-kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true


[features]
concurrency = ["dep:dashmap", "dep:futures"]

[dependencies]
uuid = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
rand = { workspace = true }
idna = { workspace = true }
tokio = { workspace = true }
dashmap = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
futures-util = { workspace = true }
regex = { workspace = true }
seahash = { workspace = true }
unicode-normalization = { workspace = true }
dyn-clone = { workspace = true }
phf = { workspace = true, features = ["macros"] }

[build-dependencies]
phf_codegen = { workspace = true }
