[package]
name = "social-test-utils"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
shared-kernel = { workspace = true, features = ["test-utils"] }
social = { workspace = true }
auth = { workspace = true }
infra-test = { workspace = true }
infra-kafka = { workspace = true }
infra-fred = { workspace = true }
shared-proto = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
