[package]
name = "social-test-utils"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
social = { workspace = true }
auth = { workspace = true }
auth-test-utils = { workspace = true }
infra-test = { workspace = true }
infra-fred = { workspace = true }
shared-proto = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
