[package]
name = "social-test-utils"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
social = { workspace = true }
auth = { workspace = true }
auth-test-utils = { workspace = true }
infra-test = { workspace = true }
infra-fred = { workspace = true }
shared-proto = { workspace = true, features = ["social"] }
shared-kernel = { workspace = true }
shared-kernel-test-utils = { workspace = true }
tonic = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
