[package]
name = "social"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
shared-kernel = { workspace = true, features = [
    "postgres",
    "kafka",
    "elasticsearch",
    "concurrency",
    "runtime",
    "test-utils",
] }
shared-proto = { workspace = true }
auth = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
fred = { workspace = true }
tonic = { workspace = true }

async-trait = { workspace = true }

scylla = { workspace = true }
tokio-stream = { version = "0.1", features = ["net"] }

[features]
test-utils = ["shared-kernel/test-utils"]