[package]
name = "social"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
shared-kernel = { workspace = true, features = [
    "elasticsearch",
    "concurrency",
    "runtime",
] }
infra-kafka = { workspace = true }
infra-scylla = { workspace = true }
infra-fred = { workspace = true }
infra-test = { workspace = true }
shared-proto = { workspace = true }
auth = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tonic = { workspace = true }

async-trait = { workspace = true }
tokio-stream = { workspace = true }

[dev-dependencies]
social-test-utils = { workspace = true }