# infrastructure/bazel/BUILD.bazel

load("@rules_rust//proto/prost:defs.bzl", "rust_prost_toolchain")

#

rust_prost_toolchain(
    name = "my_prost_toolchain_impl",
    # La syntaxe double underscore '__' permet d'accéder au BINAIRE de la crate
    # On utilise les noms exacts définis dans gen_binaries du MODULE.bazel
    prost_plugin = "@crates//:protoc-gen-prost__protoc-gen-prost",
    tonic_plugin = "@crates//:protoc-gen-tonic__protoc-gen-tonic",

    # Les librairies pour le runtime (celles-ci n'ont pas de double underscore)
    prost_types = "@crates//:prost-types",
    prost_runtime = "@crates//:prost",
    tonic_runtime = "@crates//:tonic",

    # Le compilateur et la visibilité
    proto_compiler = "@com_google_protobuf//:protoc",
    visibility = ["//visibility:public"],
)

toolchain(
    name = "my_prost_toolchain",
    toolchain = ":my_prost_toolchain_impl",
    toolchain_type = "@rules_rust//proto/prost:toolchain_type",
    visibility = ["//visibility:public"],
)